# undead-pptp

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  gradle.properties  keystore.properties.example  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  helper_main.c
app/src/main/kotlin/com/pptp/client/: MainActivity.kt
app/src/main/kotlin/com/pptp/client/helper/: HelperLifecycle.kt  UdsBridge.kt  UdsFrame.kt
app/src/main/kotlin/com/pptp/client/ppp/: CcpStateMachine.kt  Crypto.kt  IpcpStateMachine.kt  Lcp.kt  LcpStateMachine.kt  Mppe.kt  MsChapV2Auth.kt  PapAuth.kt  PppFrame.kt  Rc4.kt
app/src/main/kotlin/com/pptp/client/pptp/: ControlChannel.kt  ControlCodec.kt  ControlMessages.kt  GreFrame.kt  PptpSession.kt  SessionState.kt
app/src/main/kotlin/com/pptp/client/util/: NetworkUtil.kt  SettingsStore.kt
app/src/main/kotlin/com/pptp/client/vpn/: ForegroundNotification.kt  PptpVpnService.kt  TunPipe.kt
app/src/main/kotlin/me/jinsei/pptp/: MainActivity.kt
app/src/main/kotlin/me/jinsei/pptp/helper/: HelperLifecycle.kt  UdsBridge.kt  UdsFrame.kt
app/src/main/kotlin/me/jinsei/pptp/ppp/: CcpStateMachine.kt  Crypto.kt  IpcpStateMachine.kt  Lcp.kt  LcpStateMachine.kt  Mppe.kt  MsChapV2Auth.kt  PapAuth.kt  PppFrame.kt  Rc4.kt
app/src/main/kotlin/me/jinsei/pptp/pptp/: ControlChannel.kt  ControlCodec.kt  ControlMessages.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
(+5 files in other folders)
